<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Baking Time</string>

    <!--The JSON url-->
    <string name="query_url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>

    <!--Display this string when there is no internet connectivity-->
    <string name="no_connection">No internet connection.</string>
    <!--Display this string when no recipes are found from the API-->
    <string name="no_results">No recipes found.</string>

    <!--The number of servings in a recipe.-->
    <string name="servings">
        <xliff:g id="mins">%1$x</xliff:g> servings
    </string>

    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Directions</string>

    <string name="recipe_step_title">Recipe Step</string>

    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>

    <string name="video_error_title">Could not stream video</string>
    <string name="video_error_body">There was an error streaming the video. /nPlease try again.</string>
    <string name="positive_btn">OK</string>

    <string name="launch_error">There was a problem loading the application.</string>

    <string name="widget_ingredients_title">Ingredients</string>

    <string name="config_prompt">Select a recipe to display the ingredients list.</string>
    <string name="make_selection">Select</string>
    <string name="make_selection_prompt">Please select a recipe.</string>

    <!--Strings for the share functionality-->
    <string name="share_subject">Baking Time: <xliff:g id="mins">%1$s</xliff:g> Recipe</string>
    <string name="share_attribution">Sent using Baking Time on Android</string>

    <string name="add">Add New</string>
    
    <!--Fields for adding a Recipe-->
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_servings">Servings</string>
    <string name="ingredient_name">Name</string>
    <string name="add_ingredient_qty">Qty</string>
    <string name="add_ingredient_measurement">Meas.</string>
    <string name="add_step_short_desc">Short Description</string>
    <string name="add_step_long_desc">Detailed Instructions</string>
    <string name="add_btn">Add</string>
    <string name="add_Recipe_btn">Add Recipe</string>

    <!--This string should not need translation since it's just the x symbol to remove something-->
    <string name="delete_btn">x</string>

    <string name="incomplete_data_title">Missing Field</string>
    <!--Prompt for when a user tries to save a new recipe with incomplete data-->
    <string name="incomplete_recipe_prompt"><xliff:g id="mins">%1$s</xliff:g> is a required field.\nPlease add a value before submitting your recipe.</string>
    <!--Prompt for when a user tries to save an incomplete ingredient-->
    <string name="incomplete_ingredient_prompt">Please complete all the ingredient fields.</string>
    <!--Prompt for when a user tries to save an incomplete step-->
    <string name="incomplete_step_prompt">Please complete all the recipe step fields.</string>
    <string name="saved">Recipe saved!</string>

    <string name="clear">Clear All</string>
    <string name="clear_prompt">Are you sure you want to clear all fields?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_prompt">Are you sure you want to discard this recipe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="delete_prompt">Are you sure you want to delete this entry?</string>
    <string name="deleted_confirmation">Recipe deleted</string>
    <string name="cannot_delete">Only custom recipes can be deleted</string>

    <!--Content descriptions for the add buttons-->
    <string name="add_ingredient">Add another ingredient to the recipe</string>
    <string name="add_step">Add another step to the recipe</string>
    <!--Content descriptions for the delete buttons-->
    <string name="delete_ingredient">Delete this ingredient from the recipe</string>
    <string name="delete_step">Delete this step from the recipe</string>
    <!--Content description for loading bar-->
    <string name="loading">Loading content. Please wait.</string>
    <!--Content descriptions for the next and previous step buttons-->
    <string name="next_step">See the next step.</string>
    <string name="prev_step">See the previous step.</string>
    <!--Content descriptions for the card buttons-->
    <string name="share_btn">Share this recipe.</string>
    <string name="favorite_btn">Favorite this recipe.</string>
    <!--Content descriptions for the widget buttons-->
    <string name="settings">Configuration settings</string>
    <string name="view">View this recipe.</string>

</resources>
