<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/widget_background">

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/widget_ingredients_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_title_background"
        android:orientation="horizontal">

        <TextView
            style="@style/widgetTitle"
            android:id="@+id/widget_recipe_title"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/widget_settings_btn"
            style="@style/widgetBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_white_18dp"
            android:clickable="true"
            android:contentDescription="@string/settings"/>

        <ImageButton
            android:id="@+id/widget_launch_btn"
            style="@style/widgetBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launch_white_18dp"
            android:clickable="true"
            android:contentDescription="@string/view"/>

    </LinearLayout>

        <TextView
            style="@style/widgetSubtitle"
            android:id="@+id/widget_ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_ingredients_title" />

        <ListView
            android:id="@+id/widget_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>