<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/vertical_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_name"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/parent_margin"
            android:hint="@string/recipe_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/new_servings"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginTop="@dimen/parent_margin"
            android:hint="@string/recipe_servings"
            android:inputType="number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingredients_section"
            style="@style/addRecipeSubtitle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/ingredients_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_name" />

        <include android:id="@+id/new_ingredient1"
            layout="@layout/item_add_ingredient"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_section"/>

        <include android:id="@+id/new_ingredient2"
            layout="@layout/item_add_ingredient"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ingredient1"/>

        <include android:id="@+id/new_ingredient3"
            layout="@layout/item_add_ingredient"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ingredient2"/>

        <Button
            android:id="@+id/addMoreIngredientsBtn"
            style="@style/add_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ingredient3">
        </Button>

        <TextView
            android:id="@+id/steps_section"
            style="@style/addRecipeSubtitle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/steps_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addMoreIngredientsBtn" />

        <include android:id="@+id/new_step1"
            layout="@layout/item_add_step"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_section"/>

        <include android:id="@+id/new_step2"
            layout="@layout/item_add_step"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_step1"/>

        <include android:id="@+id/new_step3"
            layout="@layout/item_add_step"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginLeft="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_step2"/>

        <Button
            android:id="@+id/addMoreStepsBtn"
            style="@style/add_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_step3">
        </Button>

        <Button
            android:id="@+id/add_btn"
            style="@style/nav_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/parent_margin"
            android:layout_marginRight="@dimen/parent_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/add_Recipe_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addMoreStepsBtn" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>